Include bosh-deployment resource for cloud-configs

--- a/ci/tasks/deploy-zookeeper.yml
+++ b/ci/tasks/deploy-zookeeper.yml
@@ -12,6 +12,7 @@ inputs:
 - name: bosh-cli
 - name: stemcell
 - name: zookeeper-release
+- name: bosh-deployment
 
 run:
   path: bosh-src/ci/tasks/deploy-zookeeper.sh
