Add pre-signature ability to local blobstore
This change adds a (temporary) /signed/ endpoint to the blobstore, that
in conjunction with v0.39 of dav-cli allows for pre-signed urls to be
used to access blobs.

[#167978684](https://www.pivotaltracker.com/story/show/167978684)

Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/ci/docker/main-bosh-docker/inner-bosh-ops.yml
+++ b/ci/docker/main-bosh-docker/inner-bosh-ops.yml
@@ -78,6 +78,7 @@
               endpoint: http://((internal_ip)):25250
               user: agent
               password: ((blobstore_agent_password))
+              secret: ((blobstore_secret))
 
 - type: replace
   path: /instance_groups/name=bosh/properties/director/cpi_job?
