--- a/ci/docker/main-postgres/Dockerfile
+++ b/ci/docker/main-postgres/Dockerfile
@@ -2,7 +2,7 @@ FROM bosh/main-base
 
 ARG DB_VERSION
 
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list && \
+RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" > /etc/apt/sources.list.d/pgdg.list && \
     wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
     apt-get update
 
