--- a/ci/docker/main/Dockerfile
+++ b/ci/docker/main/Dockerfile
@@ -1,7 +1,7 @@
 FROM bosh/main-base
 
 # BOSH dependencies
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list && wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && apt-get update
+RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" > /etc/apt/sources.list.d/pgdg.list && wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && apt-get update
 RUN apt-get install -y \
 	mysql-client \
 	postgresql-10 \
