Remain on trusty for some images, xenial for mysql
- Created a manual tag for main-ruby-go:trusty
- main-ruby-go in pipeline will use xenial
- main-base -> main will use main-ruby-go:trusty
- main-mysql-5.7 is its own dockerfile based on xenial, including parts
from its dependent images

[#168222310](https://www.pivotaltracker.com/story/show/168222310)

--- a/ci/docker/main-base/Dockerfile
+++ b/ci/docker/main-base/Dockerfile
@@ -1,8 +1,8 @@
-FROM bosh/main-ruby-go
+FROM bosh/main-ruby-go:trusty
 
 # BOSH dependencies
 RUN apt-get update && apt-get install -y \
-	libmariadb-client-lgpl-dev \
+	libmariadbclient-dev \
 	redis-server \
 	libpq-dev \
 	sqlite3 \
