Build main image with xenial
Unit tests pass with postgresql 10

--- a/ci/docker/main-base/Dockerfile
+++ b/ci/docker/main-base/Dockerfile
@@ -1,8 +1,8 @@
-FROM bosh/main-ruby-go:trusty
+FROM bosh/main-ruby-go
 
 # BOSH dependencies
 RUN apt-get update && apt-get install -y \
-	libmariadbclient-dev \
+	libmariadb-client-lgpl-dev \
 	redis-server \
 	libpq-dev \
 	sqlite3 \
