--- a/ci/docker/main-ruby-go/Dockerfile
+++ b/ci/docker/main-ruby-go/Dockerfile
@@ -2,12 +2,11 @@ FROM ubuntu:xenial
 
 RUN apt-get clean && apt-get update && apt-get install -y locales
 
-RUN locale-gen en_US.UTF-8
-RUN dpkg-reconfigure locales
 ENV LANG en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
+RUN locale-gen en_US.UTF-8
 
-RUN apt-get -y upgrade && apt-get clean
+RUN apt-get -y upgrade
 RUN apt-get install -y \
 	build-essential \
 	git \
@@ -33,5 +32,3 @@ RUN cd /tmp && ./install-ruby.sh && rm install-ruby.sh
 COPY --from=golang:1 /usr/local/go /usr/local/go
 ENV GOROOT=/usr/local/go PATH=/usr/local/go/bin:$PATH
 ENV PATH /opt/rubies/ruby-2.6.3/bin:/opt/rubies/ruby-2.4.5/bin:$PATH
-
-RUN locale-gen en_US.UTF-8
