Allow passwordless connections to pg
Xenial/postgres now has a default pg_hba.conf that allows only peer
connections through unix sockets or password for connections to ipv4
listen address. Changed md5 method to trust.

[#168222310](https://www.pivotaltracker.com/story/show/168222310)

--- a/ci/docker/main-postgres/Dockerfile
+++ b/ci/docker/main-postgres/Dockerfile
@@ -10,3 +10,6 @@ RUN apt-get install -y \
 	postgresql-$DB_VERSION \
 	postgresql-client-$DB_VERSION \
 	&& apt-get clean
+
+ADD trust_pg_hba.conf /tmp/pg_hba.conf
+RUN cp /tmp/pg_hba.conf /etc/postgresql/$DB_VERSION/main/pg_hba.conf
