Add NUM_PROCESSES to test-integration to debug parallelization
[#168222310](https://www.pivotaltracker.com/story/show/168222310)

--- a/ci/tasks/test-integration.yml
+++ b/ci/tasks/test-integration.yml
@@ -27,3 +27,4 @@ params:
   SHA2_MODE:               ~
   DB_TLS:                  false
   DEFAULT_UPDATE_VM_STRATEGY: "delete-create"
+  NUM_PROCESSES:
