Add all localhost aliases to subject alt names in sandbox certificates
Some TLS clients (bosh-cli) won't accept an IP address in the
certificate common name.

Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/database/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/database/manifest.yml
@@ -9,6 +9,10 @@ variables:
     ca: default_ca
     common_name: 127.0.0.1
     alternative_names:
+    - 127.0.0.1
+    - 0.0.0.0
+    - localhost
+    - 0:0:0:0:0:0:0:0
     - ((hostname))
     extended_key_usage:
       - server_auth
@@ -18,6 +22,10 @@ variables:
     ca: default_ca
     common_name: 127.0.0.1
     alternative_names:
+    - 127.0.0.1
+    - 0.0.0.0
+    - localhost
+    - 0:0:0:0:0:0:0:0
     - ((hostname))
     extended_key_usage:
       - client_auth
