--- a/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
@@ -9,6 +9,10 @@ variables:
     ca: default_ca
     common_name: default.nats.bosh-internal
     alternative_names:
+    - 127.0.0.1
+    - 0.0.0.0
+    - localhost
+    - 0:0:0:0:0:0:0:0
     - ((hostname))
     extended_key_usage:
       - server_auth
@@ -18,6 +22,10 @@ variables:
     ca: default_ca
     common_name: default.director.bosh-internal
     alternative_names:
+    - 127.0.0.1
+    - 0.0.0.0
+    - localhost
+    - 0:0:0:0:0:0:0:0
     - ((hostname))
     extended_key_usage:
       - client_auth
@@ -27,6 +35,10 @@ variables:
     ca: default_ca
     common_name: default.hm.bosh-internal
     alternative_names:
+    - 127.0.0.1
+    - 0.0.0.0
+    - localhost
+    - 0:0:0:0:0:0:0:0
     - ((hostname))
     extended_key_usage:
       - client_auth
@@ -35,5 +47,11 @@ variables:
   options:
     ca: default_ca
     common_name: default.integration.test.bosh-internal
+    alternative_names:
+    - 127.0.0.1
+    - 0.0.0.0
+    - localhost
+    - 0:0:0:0:0:0:0:0
+    - ((hostname))
     extended_key_usage:
     - client_auth
