Use localhost as common name for sandbox database certs
Sequel client doesn't accept certs where the common name is 127.0.0.1
and localhost is a subject alternate name.

Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/database/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/database/manifest.yml
@@ -7,7 +7,7 @@ variables:
   type: certificate
   options:
     ca: default_ca
-    common_name: 127.0.0.1
+    common_name: localhost
     alternative_names:
     - 127.0.0.1
     - 0.0.0.0
@@ -20,7 +20,7 @@ variables:
   type: certificate
   options:
     ca: default_ca
-    common_name: 127.0.0.1
+    common_name: localhost
     alternative_names:
     - 127.0.0.1
     - 0.0.0.0
