--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -330,7 +330,10 @@ jobs:
           params:
             RUBY_VERSION: 2.6.3
             DB:           mysql
-            DB_TLS:       true
+            DB_HOST: ((integration-gcp-mysql-external-db-host))
+            DB_USERNAME: ((integration-gcp-mysql-external-db-username))
+            DB_PASSWORD: ((integration-gcp-mysql-external-db-password))
+            DB_TLS:       false
 
       - put: integration-tests-parallel-runtime
         params:
