Generate certs valid for 1000 days in sandbox
Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/database/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/database/manifest.yml
@@ -2,10 +2,12 @@ variables:
 - name: default_ca
   type: certificate
   options:
+    duration: 1000
     is_ca: true
 - name: database_server
   type: certificate
   options:
+    duration: 1000
     ca: default_ca
     common_name: 127.0.0.1
     alternative_names:
@@ -15,6 +17,7 @@ variables:
 - name: database_client
   type: certificate
   options:
+    duration: 1000
     ca: default_ca
     common_name: 127.0.0.1
     alternative_names:
