--- a/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
@@ -2,10 +2,12 @@ variables:
 - name: default_ca
   type: certificate
   options:
+    duration: 1000
     is_ca: true
 - name: nats
   type: certificate
   options:
+    duration: 1000
     ca: default_ca
     common_name: default.nats.bosh-internal
     alternative_names:
@@ -18,6 +20,7 @@ variables:
 - name: director_client
   type: certificate
   options:
+    duration: 1000
     ca: default_ca
     common_name: default.director.bosh-internal
     alternative_names:
@@ -30,6 +33,7 @@ variables:
 - name: hm_client
   type: certificate
   options:
+    duration: 1000
     ca: default_ca
     common_name: default.hm.bosh-internal
     alternative_names:
@@ -42,6 +46,7 @@ variables:
 - name: test_client
   type: certificate
   options:
+    duration: 1000
     ca: default_ca
     common_name: default.integration.test.bosh-internal
     alternative_names:
