Default database values to unset for concourse
- Concourse passes unset params as environment variables set to empty values. For our tests, we want unset params to not set any enviornment variables

[#168222310](https://www.pivotaltracker.com/story/show/168222310)

--- a/ci/tasks/test-integration.yml
+++ b/ci/tasks/test-integration.yml
@@ -22,11 +22,11 @@ run:
 params:
   RUBY_VERSION:            2.6.3
   DB:                      replace-me
-  DB_HOST:
-  DB_PASSWORD:
-  DB_USERNAME:
-  DB_PORT:
-  DB_NAME:
+  DB_HOST:                 ~
+  DB_PASSWORD:             ~
+  DB_USERNAME:             ~
+  DB_PORT:                 ~
+  DB_NAME:                 ~
   LOG_LEVEL:               ERROR
   SPEC_PATH:               ~
   SHA2_MODE:               ~
