Revert "Run Mysql integration tests against an external db"
This reverts commit 312bd1b01fc6f4d972f341d636ec7d9b999f8cd5.

Co-authored-by: Conor Nosal <cnosal@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -330,10 +330,7 @@ jobs:
           params:
             RUBY_VERSION: 2.6.3
             DB:           mysql
-            DB_HOST: ((integration-gcp-mysql-external-db-host))
-            DB_USERNAME: ((integration-gcp-mysql-external-db-username))
-            DB_PASSWORD: ((integration-gcp-mysql-external-db-password))
-            DB_TLS:       false
+            DB_TLS:       true
 
       - put: integration-tests-parallel-runtime
         params:
