Install java in main-mysql for starting UAA
[#168222310](https://www.pivotaltracker.com/story/show/168222310)

--- a/ci/docker/main-mysql/Dockerfile
+++ b/ci/docker/main-mysql/Dockerfile
@@ -38,6 +38,13 @@ RUN wget -O ruby-install-0.7.0.tar.gz https://github.com/postmodern/ruby-install
 RUN ruby-install ruby-2.6.3
 ENV PATH /opt/rubies/ruby-2.6.3/bin:/opt/rubies/ruby-2.4.5/bin:$PATH
 
+# Java to start UAA
+ADD install-java.sh /tmp/install-java.sh
+RUN chmod a+x /tmp/install-java.sh
+RUN cd /tmp && ./install-java.sh && rm install-java.sh
+ENV JAVA_HOME /usr/lib/jvm/zulu8.23.0.3-jdk8.0.144-linux_x64
+ENV PATH $JAVA_HOME/bin:$PATH
+
 # Install Golang
 COPY --from=golang:1 /usr/local/go /usr/local/go
 ENV GOROOT=/usr/local/go PATH=/usr/local/go/bin:$PATH
